--- a/src/app/components/ingresar-presupuesto/ingresar-presupuesto.component.html
+++ b/src/app/components/ingresar-presupuesto/ingresar-presupuesto.component.html
@@ -2,7 +2,7 @@
   <div class="col-lg-6 offset-lg-3">
     <h2 class="text-center fontTitle">Ingresar Presupuesto</h2>
     <div class="card">
-      <div class="card-body">
+      <div class="card-body shadow-lg">
         <div *ngIf="cantidadIncorrecta" class="text-center mb-3">
           <span class="badge bg-danger textError"
             >EL PRESUPUESTO DEBE SER MAYOR A CERO</span
